<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bj1">

    <LinearLayout
        android:id="@+id/llStudyPage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llStudyNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- 在此定义页面主体布局 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/task_title"
                android:textSize="20sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_background"
            android:gravity="center_vertical"
            android:inputType="text"
            android:padding="5dip"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:text="@string/task_content"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/shape_background"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:padding="5dip"
            android:textSize="20sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btnMarkComplete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_button"
                android:drawableRight="@drawable/handdraw_tick"
                android:gravity="center_vertical"
                android:padding="5dip"
                android:text="@string/mark_complete"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnMarkUnComplete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_button"
                android:drawableRight="@drawable/handdraw_untick"
                android:gravity="center_vertical"
                android:padding="5dip"
                android:text="@string/mark_uncomplete"
                android:visibility="gone" />


        </RelativeLayout>
    </LinearLayout>>

    <!-- 以下为导航栏的布局 -->
    <LinearLayout
        android:id="@+id/llStudyNav"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navBack"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llStudyPage">

        <!-- 其他按钮设为未激活样式，注意 drawableTop 和 textColor 属性的值 -->
        <Button
            android:id="@+id/btnNavStudy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_study_selected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavStudy"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navActivated"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnNavTime"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_time_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavTime"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />

        <!-- 【主页】活动中，【主页】按钮设为已激活样式，注意 drawableTop 和 textColor 属性的值 -->
        <Button
            android:id="@+id/btnNavShare"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavShare"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />
        <Button
            android:id="@+id/btnNavData"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_data_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavData"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />
        <Button
            android:id="@+id/btnNavCard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_card_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavCard"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>