<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bj7">

    <LinearLayout
        android:id="@+id/llTimePage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/llTimeNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- 在此定义页面主体布局 -->
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/daoshuri_toolbar"/>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp">

                <include layout="@layout/daoshuri_list_head"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="104dp"
                android:orientation="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/main_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>

    <!-- 以下为导航栏的布局 -->
    <LinearLayout
        android:id="@+id/llTimeNav"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/navBack"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llTimePage">

        <!-- 其他按钮设为未激活样式，注意 drawableTop 和 textColor 属性的值 -->
        <Button
            android:id="@+id/btnNavStudy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_study_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavStudy"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnNavTime"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_time_selected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavTime"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navActivated"
            tools:ignore="OnClick" />

        <!-- 【主页】活动中，【主页】按钮设为已激活样式，注意 drawableTop 和 textColor 属性的值 -->
        <Button
            android:id="@+id/btnNavShare"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavShare"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />
        <Button
            android:id="@+id/btnNavData"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_data_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavData"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />

        <Button
            android:id="@+id/btnNavCard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_card_unselected"
            android:onClick="onNavButtonsTapped"
            android:text="@string/btnNavCard"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/navNormal"
            tools:ignore="OnClick" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
